tree-sitter-quadrate/test/corpus/builtins.txt
================================================================================
Stack operations
================================================================================

fn test( -- ) {
    5 dup swap drop
    over rot nip
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (builtin_operation)
      (builtin_operation)
      (builtin_operation)
      (builtin_operation)
      (builtin_operation)
      (builtin_operation))))

================================================================================
Arithmetic operations
================================================================================

fn test( -- ) {
    5 10 add
    20 5 sub
    3 4 mul
    10 2 div
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation))))

================================================================================
Math functions
================================================================================

fn test( -- ) {
    3.14 sin cos tan
    0.5 asin acos atan
    2.718 ln log10
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (builtin_operation)
      (builtin_operation)
      (builtin_operation)
      (number)
      (builtin_operation)
      (builtin_operation)
      (builtin_operation)
      (number)
      (builtin_operation)
      (builtin_operation))))

================================================================================
Comparison operations
================================================================================

fn test( -- ) {
    5 5 eq
    10 20 neq
    5 10 lt
    10 5 gt
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation))))

================================================================================
Logic operations
================================================================================

fn test( -- ) {
    1 1 and
    0 1 or
    1 not
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (builtin_operation))))

================================================================================
I/O operations
================================================================================

fn test( -- ) {
    5 print
    "hello" print
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (builtin_operation)
      (string)
      (builtin_operation))))
