tree-sitter-quadrate/test/corpus/functions.txt
================================================================================
Function definition without signature
================================================================================

fn test( -- ) {
    5 10 add
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation))))

================================================================================
Function definition with parameters
================================================================================

fn multiply( x:f64 y:f64 -- z:f64 ) {
    mul
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))
        (parameter
          name: (identifier)
          type: (type
            (identifier))))
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))))
    body: (block
      (builtin_operation))))

================================================================================
Multiple functions
================================================================================

fn add_two( x:f64 -- result:f64 ) {
    2 add
}

fn main( -- ) {
    5 add_two
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier))))
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))))
    body: (block
      (number)
      (builtin_operation)))
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (identifier))))

================================================================================
Public function definition without parameters
================================================================================

pub fn double( x:f64 -- y:f64 ) {
	dup add
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier))))
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))))
    body: (block
      (builtin_operation)
      (builtin_operation))))

================================================================================
Mixed public and private functions
================================================================================

pub fn square( x:f64 -- y:f64 ) {
	dup mul
}

fn helper( -- ) {
	10
}

pub fn ten() {
	helper
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier))))
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))))
    body: (block
      (builtin_operation)
      (builtin_operation)))
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)))
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (identifier))))

================================================================================
Stack function with documentary parameter names
================================================================================

stack fn sq( n:i64 -- r:i64 ) {
    dup *
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier))))
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))))
    body: (block
      (builtin_operation)
      (operator_symbol))))

================================================================================
Stack function with unnamed parameters and every modifier
================================================================================

pub inline stack fn twice( i64 -- r:i64 ) {
    2 *
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter
          type: (type
            (identifier))))
      (parameter_list
        (parameter
          name: (identifier)
          type: (type
            (identifier)))))
    body: (block
      (number)
      (operator_symbol))))
